--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="screen">
       0
     </section>
-    <section class="calc-button">
+    <section class="calc-buttons">
       <div class="calc-button-row">
         <button class="calc-button double">
           C
@@ -27,7 +27,7 @@
         </button>
       </div>
 
-      <div class="calc-butto-row">
+      <div class="calc-button-row">
         <button class="calc-button">
           7
         </button>
@@ -42,7 +42,7 @@
         </button>
       </div>
 
-      <div class="calc-butto-row">
+      <div class="calc-button-row">
         <button class="calc-button">
           4
         </button>
@@ -57,7 +57,7 @@
         </button>
       </div>
 
-      <div class="calc-butto-row">
+      <div class="calc-button-row">
         <button class="calc-button">
           1
         </button>
